--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/i18n": "^8.0.0-rc.11",
+    "@unocss/nuxt": "^0.58.2",
+    "@unocss/preset-uno": "^0.58.2",
     "eslint": "^8.55.0",
     "nuxt": "^3.8.2",
-    "sass": "^1.69.5",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^0.8.1"
+    "@formkit/auto-animate": "^0.8.1",
+    "@unocss/reset": "^0.58.2"
   }
 }
