--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@unocss/nuxt": "^0.58.2",
     "@unocss/preset-uno": "^0.58.2",
     "eslint": "^8.55.0",
-    "nuxt": "^3.8.2",
+    "nuxt": "^3.9.0",
+    "sass": "^1.69.6",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
