--- a/package.json
+++ b/package.json
@@ -5,20 +5,26 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "test": "vitest",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/test-utils": "^3.11.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/i18n": "^8.0.0-rc.11",
     "@unocss/nuxt": "^0.58.2",
     "@unocss/preset-uno": "^0.58.2",
+    "@vue/test-utils": "^2.4.4",
     "eslint": "^8.55.0",
+    "happy-dom": "^13.3.5",
     "nuxt": "^3.9.0",
+    "playwright-core": "^1.41.1",
     "sass": "^1.69.6",
+    "vitest": "^1.2.2",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
