--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
+    "@nuxt/image": "^1.3.0",
     "@unocss/core": "^0.58.2",
     "@unocss/reset": "^0.58.2"
   }
