--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.1.105",
     "@nuxt/devtools": "latest",
     "@nuxt/test-utils": "^3.11.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/i18n": "^8.0.0-rc.11",
     "@unocss/nuxt": "^0.58.2",
+    "@unocss/preset-icons": "^0.58.4",
     "@unocss/preset-uno": "^0.58.2",
     "@unocss/transformer-attributify-jsx": "^0.58.4",
     "@unocss/transformer-variant-group": "^0.58.4",
